--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'fr.greta92.domes.domes'
-    mainClass = 'fr.greta92.domes.domes.HelloApplication'
+    mainModule = 'fr.greta.domes'
+    mainClass = 'fr.greta.domes.Main'
 }
 
 javafx {
@@ -43,9 +43,6 @@ dependencies {
     }
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-    implementation('eu.hansolo:tilesfx:17.1.15') {
-        exclude(group: 'org.openjfx')
-    }
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
