--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     implementation('net.synedra:validatorfx:0.4.0') {
         exclude(group: 'org.openjfx')
     }
-//    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
+    // https://mvnrepository.com/artifact/de.jensd/fontawesomefx
+    implementation group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
+    //implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
